[gd_scene load_steps=5 format=3 uid="uid://pv36lbroppol"]

[ext_resource type="Script" uid="uid://b86ktmu3y6r3b" path="res://Systems/Scripts/VampireSurvival/LauncherMenu.gd" id="1_launcher"]

[sub_resource type="Gradient" id="Gradient_2ksr4"]
offsets = PackedFloat32Array(0, 0.25, 0.65, 1)
colors = PackedColorArray(0.05, 0.05, 0.08, 1, 0.1, 0.1, 0.15, 1, 0.12, 0.14, 0.25, 1, 0.15, 0.18, 0.3, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bxrq7"]
gradient = SubResource("Gradient_2ksr4")
fill_to = Vector2(0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m1ygw"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(600, 400, 1)
angular_velocity_min = -10.0
angular_velocity_max = 10.0
gravity = Vector3(0, -10, 0)
scale_min = 0.5
scale_max = 3.0
color = Color(0.25, 0.6, 1, 0.25)
hue_variation_min = -0.1
hue_variation_max = 0.1
turbulence_enabled = true
turbulence_noise_strength = 0.5
turbulence_noise_scale = 2.0

[node name="VampireSurvivorsLauncher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_launcher")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bxrq7")

[node name="GateEffects" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlueCircle" type="ColorRect" parent="GateEffects"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 200)
color = Color(0, 0.1, 0.2, 0.05)

[node name="BlueCircle2" type="ColorRect" parent="GateEffects"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 150)
color = Color(0, 0.2, 0.35, 0.05)

[node name="BackgroundParticles" type="GPUParticles2D" parent="."]
position = Vector2(576, 324)
amount = 80
lifetime = 8.0
preprocess = 10.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_m1ygw")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.2, 0.4, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 48
text = "PARASITE ASCENSION
HUNTER MODE"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 29.0
offset_right = 300.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 0.8)
theme_override_font_sizes/font_size = 18
text = "A SYSTEM HAS CHOSEN YOU"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = 100.0
offset_right = 350.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.1, 0.2, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 12
text = "Enter the dangerous dungeon and survive waves of increasingly powerful monsters.

• Gain levels and grow stronger over time
• Collect chemicals for powerful abilities
• Defeat enemies to gain experience points
• Survive as long as possible to increase your Hunter Rank

Are you ready to test your limits?"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Hunt"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 55.0
offset_right = 100.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
text = "Back to Main Game"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.5, 0.7, 0.745098)
theme_override_font_sizes/font_size = 12
text = "Version 0.0"
horizontal_alignment = 2
vertical_alignment = 2
